; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_reset.c_git_reset.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_reset.c_git_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_reset(i32* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @git_object_id(i32* %11)
  %13 = call i32 @git_oid_tostr_s(i32 %12)
  %14 = load i32, i32* %7, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @reset(i32* %9, i32* %10, i32 %13, i32 %14, i32* %15)
  ret i32 %16
}

declare dso_local i32 @reset(i32*, i32*, i32, i32, i32*) #1

declare dso_local i32 @git_oid_tostr_s(i32) #1

declare dso_local i32 @git_object_id(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
